Update navigation links to use absolute paths for consistency across pages

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 <body class="bg-background-light dark:bg-background-dark text-[#0d121b] dark:text-slate-200 transition-colors duration-200">
 <script>
     // Redirect to Homepage
-    window.location.href = './homepage.html';
+    window.location.href = './pages/homepage.html';
 </script>
 <noscript>
-    <meta http-equiv="refresh" content="0; url=./homepage.html" />
-    <p>Please enable JavaScript or <a href="./homepage.html">click here</a> to continue.</p>
+    <meta http-equiv="refresh" content="0; url=./pages/homepage.html" />
+    <p>Please enable JavaScript or <a href="./pages/homepage.html">click here</a> to continue.</p>
 </noscript>
 </body>
 </html>
