Remove .htaccess and router.py, update HTML links to include .html extensions for consistency

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -55,19 +55,19 @@
 <div class="max-w-7xl mx-auto px-6">
 <div class="flex items-center justify-between h-16">
 <div class="flex items-center gap-1">
-<a class="px-4 py-2 text-sm font-semibold text-primary border-b-2 border-primary" href="/pages/homepage">Home</a>
-<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/aboutus">About Us</a>
-<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/services">Services</a>
-<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/gallery">Gallery</a>
-<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/vision">Vision &amp; Mission</a>
-<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/reports">Annual Report</a>
+<a class="px-4 py-2 text-sm font-semibold text-primary border-b-2 border-primary" href="/pages/homepage.html">Home</a>
+<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/aboutus.html">About Us</a>
+<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/services.html">Services</a>
+<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/gallery.html">Gallery</a>
+<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/vision.html">Vision &amp; Mission</a>
+<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/reports.html">Annual Report</a>
 </div>
 <div class="flex items-center gap-4">
 <div class="hidden md:flex items-center bg-gray-100 dark:bg-slate-800 rounded-lg px-3 py-1.5">
 <span class="material-symbols-outlined text-gray-400 text-xl">search</span>
 <input class="bg-transparent border-none focus:ring-0 text-sm w-48 placeholder:text-gray-400" placeholder="Search resources..." type="text"/>
 </div>
-<a href="/pages/contact" class="bg-primary text-white px-5 py-2 rounded-lg text-sm font-bold hover:bg-blue-700 transition-colors inline-block">
+<a href="/pages/contact.html" class="bg-primary text-white px-5 py-2 rounded-lg text-sm font-bold hover:bg-blue-700 transition-colors inline-block">
                         Contact Us
                     </a>
 </div>
@@ -82,8 +82,8 @@
 <h2 class="text-white text-4xl md:text-5xl font-black mb-4 leading-tight">Welcome to Purbottar Vikash Parishad</h2>
 <p class="text-white/90 text-lg mb-8 font-light">Purbottar Vikash Parishad is a reputed NGO in Assam serving needy, poor and backward communities of the region since its inception and growth work daily</p>
 <div class="flex items-center justify-center gap-4">
-<a href="/pages/services" class="bg-primary text-white px-8 py-3 rounded-lg font-bold text-base hover:bg-blue-700 transition-all inline-block">Explore Services</a>
-<a href="/pages/reports" class="bg-white/10 backdrop-blur-md text-white border border-white/20 px-8 py-3 rounded-lg font-bold text-base hover:bg-white/20 transition-all inline-block">Latest Reports</a>
+<a href="/pages/services.html" class="bg-primary text-white px-8 py-3 rounded-lg font-bold text-base hover:bg-blue-700 transition-all inline-block">Explore Services</a>
+<a href="/pages/reports.html" class="bg-white/10 backdrop-blur-md text-white border border-white/20 px-8 py-3 rounded-lg font-bold text-base hover:bg-white/20 transition-all inline-block">Latest Reports</a>
 </div>
 </div>
 </div>
