--- a/pages/vision.html
+++ b/pages/vision.html
@@ -59,16 +59,16 @@
 <div class="max-w-7xl mx-auto px-6">
 <div class="flex items-center justify-between h-16">
 <div class="flex items-center gap-1">
-<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/homepage">Home</a>
-<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/aboutus">About Us</a>
-<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/services">Services</a>
-<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/gallery">Gallery</a>
-<a class="px-4 py-2 text-sm font-semibold text-primary border-b-2 border-primary" href="/pages/vision">Vision &amp; Mission</a>
-<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/reports">Annual Report</a>
+<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/homepage.html">Home</a>
+<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/aboutus.html">About Us</a>
+<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/services.html">Services</a>
+<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/gallery.html">Gallery</a>
+<a class="px-4 py-2 text-sm font-semibold text-primary border-b-2 border-primary" href="/pages/vision.html">Vision &amp; Mission</a>
+<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/reports.html">Annual Report</a>
 </div>
 <div class="flex items-center gap-4">
 <button class="bg-primary text-white px-5 py-2 rounded-lg text-sm font-bold hover:bg-blue-700 transition-colors">Search</button>
-<a href="/pages/contact" class="bg-primary text-white px-5 py-2 rounded-lg text-sm font-bold hover:bg-blue-700 transition-colors inline-block">
+<a href="/pages/contact.html" class="bg-primary text-white px-5 py-2 rounded-lg text-sm font-bold hover:bg-blue-700 transition-colors inline-block">
                         Contact Us
                     </a>
 </div>
