--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -56,19 +56,19 @@
 <div class="max-w-7xl mx-auto px-6">
 <div class="flex items-center justify-between h-16">
 <div class="flex items-center gap-1">
-<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/homepage">Home</a>
-<a class="px-4 py-2 text-sm font-semibold text-primary border-b-2 border-primary" href="/pages/aboutus">About Us</a>
-<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/services">Services</a>
-<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/gallery">Gallery</a>
-<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/vision">Vision &amp; Mission</a>
-<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/reports">Annual Report</a>
+<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/homepage.html">Home</a>
+<a class="px-4 py-2 text-sm font-semibold text-primary border-b-2 border-primary" href="/pages/aboutus.html">About Us</a>
+<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/services.html">Services</a>
+<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/gallery.html">Gallery</a>
+<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/vision.html">Vision &amp; Mission</a>
+<a class="px-4 py-2 text-sm font-medium text-gray-600 dark:text-gray-400 hover:text-primary transition-colors" href="/pages/reports.html">Annual Report</a>
 </div>
 <div class="flex items-center gap-4">
 <div class="hidden md:flex items-center bg-gray-100 dark:bg-slate-800 rounded-lg px-3 py-1.5">
 <span class="material-symbols-outlined text-gray-400 text-xl">search</span>
 <input class="bg-transparent border-none focus:ring-0 text-sm w-48 placeholder:text-gray-400" placeholder="Search resources..." type="text"/>
 </div>
-<a href="/pages/contact" class="bg-primary text-white px-5 py-2 rounded-lg text-sm font-bold hover:bg-blue-700 transition-colors inline-block">
+<a href="/pages/contact.html" class="bg-primary text-white px-5 py-2 rounded-lg text-sm font-bold hover:bg-blue-700 transition-colors inline-block">
                     Contact Us
                 </a>
 </div>
