Remove homepage.html and add favicon links to all relevant HTML files

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Purbottar Vikash Parishad - A reputed NGO in Assam serving needy, poor and backward communities through health, education, and livelihood programs."/>
     <meta name="keywords" content="NGO, Assam, social development, health camps, education, skill training"/>
     <meta name="author" content="Purbottar Vikash Parishad"/>
+    <link rel="icon" type="image/png" href="Images/Favicon.png"/>
     <script id="tailwind-config">
         tailwind.config = {
             darkMode: "class",
