Update design credits across multiple pages to remove "Maintained By" phrasing

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -238,7 +238,7 @@ Pin: 786125, ASSAM
 <p class="text-gray-400 text-xs">© 2015 Purbottar Vikash Parishad. All Rights Reserved</p>
 <div class="flex items-center gap-2">
 <span class="material-symbols-outlined text-gray-300 text-base">verified_user</span>
-<span class="text-gray-400 text-xs font-medium tracking-tight uppercase">Designed & Maintained By Ayan Kashyap</span>
+<span class="text-gray-400 text-xs font-medium tracking-tight uppercase">Designed By Ayan Kashyap</span>
 </div>
 </div>
 </div>
