--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -130,7 +130,7 @@ The organization has its own capital a/c which is assessed Rs. 71,882/- as on 31
 <li><a class="text-gray-500 dark:text-gray-400 text-sm hover:text-primary" href="contact.html">Contact Us</a></li>
 <li><a class="text-gray-500 dark:text-gray-400 text-sm hover:text-primary" href="#">Privacy Policy</a></li>
 <li><a class="text-gray-500 dark:text-gray-400 text-sm hover:text-primary" href="#">Terms of Service</a></li>
-<li><a class="text-gray-500 dark:text-gray-400 text-sm hover:text-primary" href="#">Donate Now</a></li>
+<li><a class="text-gray-500 dark:text-gray-400 text-sm hover:text-primary" href="donate.html">Donate Now</a></li>
 </ul>
 </div>
 <div>
