--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -231,7 +231,7 @@
 <li><a class="text-gray-500 dark:text-gray-400 text-sm hover:text-primary" href="/pages/contact.html">Contact Us</a></li>
 <li><a class="text-gray-500 dark:text-gray-400 text-sm hover:text-primary" href="#">Privacy Policy</a></li>
 <li><a class="text-gray-500 dark:text-gray-400 text-sm hover:text-primary" href="#">Terms of Service</a></li>
-<li><a class="text-gray-500 dark:text-gray-400 text-sm hover:text-primary" href="#">Donate Now</a></li>
+<li><a class="text-gray-500 dark:text-gray-400 text-sm hover:text-primary" href="donate.html">Donate Now</a></li>
 </ul>
 </div>
 <div>
