feat: add HomePage, Reports, Services, Vision pages and configure Tailwind CSS
- Implemented HomePage with news, events, and photo gallery sections.
- Created Reports page with annual report highlights and financial summaries.
- Developed Services page detailing various community support programs.
- Added Vision page outlining the organization's vision, mission, and strategic objectives.
- Configured Tailwind CSS for styling and responsive design.
- Updated Vercel configuration for deployment and caching strategies.

--- a/index.html
+++ b/index.html
@@ -1,53 +1,18 @@
 <!DOCTYPE html>
-<html class="light" lang="en">
+<html lang="en">
 <head>
-    <meta charset="utf-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Purbottar Vikash Parishad - NGO for Social Development</title>
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
-    <meta name="description" content="Purbottar Vikash Parishad - A reputed NGO in Assam serving needy, poor and backward communities through health, education, and livelihood programs."/>
-    <meta name="keywords" content="NGO, Assam, social development, health camps, education, skill training"/>
-    <meta name="author" content="Purbottar Vikash Parishad"/>
-    <link rel="icon" type="image/png" href="Images/Favicon.png"/>
-    <script id="tailwind-config">
-        tailwind.config = {
-            darkMode: "class",
-            theme: {
-                extend: {
-                    colors: {
-                        "primary": "#1152d4",
-                        "background-light": "#f6f6f8",
-                        "background-dark": "#101622",
-                    },
-                    fontFamily: {
-                        "display": ["Public Sans", "sans-serif"]
-                    },
-                    borderRadius: {
-                        "DEFAULT": "0.25rem",
-                        "lg": "0.5rem",
-                        "xl": "0.75rem",
-                        "full": "9999px"
-                    },
-                },
-            },
-        }
-    </script>
-    <style>
-        body {
-            font-family: "Public Sans", sans-serif;
-        }
-        .material-symbols-outlined {
-            font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
-        }
-    </style>
+    <meta name="description" content="Purbottar Vikash Parishad - A reputed NGO in Assam serving needy, poor and backward communities through health, education, and livelihood programs." />
+    <meta name="keywords" content="NGO, Assam, social development, health camps, education, skill training" />
+    <meta name="author" content="Purbottar Vikash Parishad" />
+    <link rel="icon" type="image/png" href="/Images/Favicon.png" />
 </head>
 <body class="bg-background-light dark:bg-background-dark text-[#0d121b] dark:text-slate-200 transition-colors duration-200">
-<script>
-    // Redirect to Homepage
-    window.location.href = './pages/homepage.html';
-</script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+</body>
 <noscript>
     <meta http-equiv="refresh" content="0; url=./pages/homepage.html" />
     <p>Please enable JavaScript or <a href="./pages/homepage.html">click here</a> to continue.</p>
